# viennamos-dev

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.in  CTestConfig.cmake  LICENSE  README  README.md  changelog  clean.sh  developer_notes.txt  update_subtrees.sh
cmake/: CMakeLists.txt.in  FindViennaCL.cmake  FindViennaData.cmake  FindViennaFVM.cmake  FindViennaGrid.cmake  FindViennaMath.cmake  GetViennaCL.cmake  GetViennaData.cmake  GetViennaFVM.cmake  GetViennaGrid.cmake  GetViennaMaterials.cmake  GetViennaMath.cmake  GetViennaMesh.cmake  GetViennaMini.cmake  ViennaDataCommon.cmake  ViennaDataConfig.cmake.in  dashboardInitialCache.cmake
doc/: Doxyfile  Doxyfile.in  interface.txt
doc/manual/: Makefile  additional.tex  basic-usage.tex  benchmarks.tex  contributors.tex  cover.tex  design-decisions.tex  expressions.tex  installation.tex  internals.tex  introduction.tex  manipulation.tex  pitfalls.tex  use-cases.tex  viennadata.bib  viennamath.tex
examples/: CMakeLists.txt  basic.cpp  latex_output.cpp  newton_solve.cpp  nin2d.cpp  substitute.cpp  traversal.cpp  trigate.cpp
examples/ViennaMini/half-trigate/: half_trigate_old.ini
examples/ViennaMini/mosfet/: mosfet840.ini  mosfet840.mesh
examples/data/: line23.mesh  mosfet.in2d  square8.mesh
examples/tutorial/: mosfet.cpp  mosfet_3d.cpp  mosfet_old.cpp  nin2d.cpp  nin_1d.cpp  nin_2d_laplace.cpp  poisson_1d.cpp  poisson_2d.cpp  poisson_3d.cpp  trigate.cpp
examples/tutorials/: CMakeLists.txt  relaunch.cpp
framework/: CMakeLists.txt  thesource.qrc
framework/include/: QVariantPtr.hpp  chart2d.h  charteditor.h  chartentry.h  charttableparameters.h  common.hpp  copy.hpp  database.hpp  device.h  device.hpp  forwards.hpp  keys_quantities.hpp  keys_units.hpp  license.h  mainwindow.h  materialmanager.h  messenger.h  module_factory.h  module_interface.h  module_manager.h  modulecontrol.h  multiview.h  newview.h  offload_to_worker.hpp  qdebugstream.h  quantity.h  quantity_set.hpp_old  render3d.h  rendereditor.h  screenshot.h  stream_emitter.h  table_entry.h  xmlstreamio.h
framework/resources/: materials.xml
framework/resources/splashimage/: sky_iuecol.eps
framework/src/: chart2d.cpp  charteditor.cpp  chartentry.cpp  charttableparameters.cpp  device.cpp  license.cpp  main.cpp  mainwindow.cpp  materialmanager.cpp  messenger.cpp  module_interface.cpp  module_manager.cpp  modulecontrol.cpp  multiview.cpp  newview.cpp  qdebugstream.cpp  quantity.cpp  render3d.cpp  rendereditor.cpp  screenshot.cpp  stream_emitter.cpp  table_entry.cpp  xmlstreamio.cpp
framework/ui/: charteditor.ui  license.ui  mainwindow.ui  materialmanager.ui  messenger.ui  module_manager.ui  modulecontrol.ui  newview.ui  rendereditor.ui  screenshot.ui
modules/: CMakeLists.txt
modules/DeviceGenerator/: CMakeLists.txt  csggenerator.cpp  csggenerator.h  csggenerator.ui  device_generator.cpp  device_generator.h  device_generator_form.cpp  device_generator_form.h  device_generator_form.ui  device_generator_global.h  device_generator_module.cpp  device_generator_module.h  forwards.h
modules/DeviceGenerator/examples/: half-trigate.geo
modules/ViennaMini/: CMakeLists.txt  deviceparameters.hpp  scale_algorithm.hpp  segmentparameters.hpp  utils.hpp  viennamini.cpp  viennamini.h  viennamini_global.h  viennaminiform.cpp  viennaminiform.h  viennaminiform.ui  viennaminimodule.cpp  viennaminimodule.h  viennaminiworker.cpp  viennaminiworker.h
modules/ViennaMini/examples/half-trigate/: half-trigate-2.mesh  half-trigate.ini
modules/ViennaMini/examples/mosfet/: mosfet840.ini
modules/ViennaMini/examples/nin/: nin2d.ini
src/: config.cpp  device_tetrahedral3d.cpp  device_triangular2d.cpp  simulator.tpp  simulator_tetrahedral3d.cpp  simulator_triangular2d.cpp
tests/: CMakeLists.txt
tests/src/: diff_test.cpp  external_2.cpp  poisson_2d.cpp
viennadata/: api.hpp  container_map.hpp  forwards.hpp
viennadata/meta/: result_of.hpp
viennafvm/: boundary.hpp  flux.hpp  forwards.h  linear_solve.hpp  pde_solver.hpp  timer.hpp  util.hpp
viennafvm/io/: vtk_writer.hpp
viennafvm/linear_solvers/: viennacl.hpp
viennamath/: exception.hpp  expression.hpp  forwards.h
viennamath/compiletime/: ct_function_symbol.hpp  ct_interval.hpp
viennamath/compiletime/operations/: ct_constant.hpp
viennamath/manipulation/: diff.hpp  integrate.hpp  substitute.hpp
viennamath/manipulation/detail/: binary_operations.hpp
viennamath/runtime/: binary_operators.hpp  constant.hpp  expr.hpp  function_symbol.hpp  integral.hpp  interval.hpp  numerical_quadrature.hpp  vector_expr.hpp
viennamath/runtime/operations/: constant.hpp  function_symbol.hpp  rt_rt.hpp
viennamini/: config.hpp  constants.hpp  device.hpp  fwd.h  physics.hpp  result_accessor.hpp  simulator.hpp
viennamini/models/: README.txt
